testdata/baselines/reference/submodule/conformance/jsDeclarationsFunctionLikeClasses2.errors.txt
referencer.js(3,23): error TS2350: Only a void function can be called with the 'new' keyword.
source.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
source.js(13,16): error TS2749: 'Vec' refers to a value, but is being used as a type here. Did you mean 'typeof Vec'?
source.js(13,16): error TS8010: Type annotations can only be used in TypeScript files.
source.js(35,12): error TS8010: Type annotations can only be used in TypeScript files.
source.js(36,12): error TS8010: Type annotations can only be used in TypeScript files.
source.js(40,16): error TS2350: Only a void function can be called with the 'new' keyword.
source.js(53,16): error TS8010: Type annotations can only be used in TypeScript files.
source.js(62,16): error TS8010: Type annotations can only be used in TypeScript files.


==== source.js (8 errors) ====
    /**
     * @param {number} len
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    export function Vec(len) {
        /**
         * @type {number[]}
         */
        this.storage = new Array(len);
    }
    
    Vec.prototype = {
        /**
         * @param {Vec} other
                   ~~~
!!! error TS2749: 'Vec' refers to a value, but is being used as a type here. Did you mean 'typeof Vec'?
                   ~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        dot(other) {
            if (other.storage.length !== this.storage.length) {
                throw new Error(`Dot product only applicable for vectors of equal length`);
            }
            let sum = 0;
            for (let i = 0; i < this.storage.length; i++) {
                sum += (this.storage[i] * other.storage[i]);
            }
            return sum;
        },
        magnitude() {
            let sum = 0;
            for (let i = 0; i < this.storage.length; i++) {
                sum += (this.storage[i] ** 2);
            }
            return Math.sqrt(sum);
        }
    }
    
    /**
     * @param {number} x
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {number} y
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    export function Point2D(x, y) {
        if (!(this instanceof Point2D)) {
            return new Point2D(x, y);
                   ~~~~~~~~~~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.
        }
        Vec.call(this, 2);
        this.x = x;
        this.y = y;
    }
    
    Point2D.prototype = {
        __proto__: Vec,
        get x() {
            return this.storage[0];
        },
        /**
         * @param {number} x
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        set x(x) {
            this.storage[0] = x;
        },
        get y() {
            return this.storage[1];
        },
        /**
         * @param {number} y
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        set y(y) {
            this.storage[1] = y;
        }
    };
    
==== referencer.js (1 errors) ====
    import {Point2D} from "./source";
    
    export const origin = new Point2D(0, 0);
                          ~~~~~~~~~~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.
    // export const res = Point2D(2, 3).dot(origin); // TODO: when __proto__ works, validate this
    